--- a/src/virus/view/Juego_1.fxml
+++ b/src/virus/view/Juego_1.fxml
@@ -72,6 +72,7 @@
                   </HBox>
                   <Rectangle fx:id="CartasDesechadas" arcHeight="10.0" arcWidth="10.0" fill="WHITE" height="129.0" layoutX="335.0" layoutY="174.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="73.0" />
                   <Rectangle fx:id="MazoCartas" arcHeight="10.0" arcWidth="10.0" fill="WHITE" height="129.0" layoutX="494.0" layoutY="174.0" onMouseClicked="#obtenerCarta" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="73.0" />
+                  <ImageView fx:id="imgDesechada" fitHeight="127.0" fitWidth="73.0" layoutX="335.0" layoutY="175.0" onMouseClicked="#CartaDesechada" pickOnBounds="true" preserveRatio="true" />
                </children>
             </AnchorPane>
          </children>
