--- a/src/virus/view/newCascadeStyleSheet.css
+++ b/src/virus/view/newCascadeStyleSheet.css
@@ -34,6 +34,15 @@
     -fx-text-fill : white;
 }
 
+#fondo_juego{
+    -fx-background-size: 100% 100%; 
+    -fx-background-image: url("../resources/fondoJuego1.jpg");
+}
+
+#omg{
+    -fx-background-size: 100% 100%; 
+    -fx-background-image: url("../resources/fondo2.png");
+}
 .lbl:hover{
     -fx-font-family: "Decker";
     -fx-font-size : 27pt;
