--- a/src/virus/view/Inicio.fxml
+++ b/src/virus/view/Inicio.fxml
@@ -2,18 +2,16 @@
 
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="645.0" prefWidth="1009.0" stylesheets="@newCascadeStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="virus.controller.InicioController">
+<BorderPane minHeight="-Infinity" minWidth="-Infinity" prefWidth="1009.0" stylesheets="@newCascadeStyleSheet.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="virus.controller.InicioController">
    <center>
       <VBox>
          <children>
-            <AnchorPane id="AnchorPane" prefHeight="645.0" prefWidth="900.0" stylesheets="@newCascadeStyleSheet.css">
+            <AnchorPane id="omg" prefHeight="645.0" prefWidth="900.0" stylesheets="@newCascadeStyleSheet.css">
                <children>
-                  <ImageView fx:id="omg" fitHeight="645.0" fitWidth="900.0" pickOnBounds="true" preserveRatio="true" />
                   <Label layoutX="14.0" layoutY="562.0" onMouseClicked="#Salir" styleClass="lbl" text="Salir" />
                   <Label layoutX="763.0" layoutY="562.0" onMouseClicked="#Jugar" styleClass="lbl2" text="Jugar" />
                   <JFXTextField fx:id="txtIP" layoutX="241.0" layoutY="122.0" prefHeight="31.0" prefWidth="420.0" promptText="Dirección IP" />
