--- a/src/virus/view/Juego.fxml
+++ b/src/virus/view/Juego.fxml
@@ -12,9 +12,8 @@
    <center>
       <VBox>
          <children>
-            <AnchorPane id="AnchorPane" fx:id="anchor" prefHeight="645.0" prefWidth="900.0" stylesheets="@newCascadeStyleSheet.css">
+            <AnchorPane id="fondo_juego" fx:id="fondo_juego" prefHeight="645.0" prefWidth="900.0" stylesheets="@newCascadeStyleSheet.css">
                <children>
-                  <ImageView fx:id="omg" fitHeight="645.0" fitWidth="1009.0" pickOnBounds="true" preserveRatio="true" />
                   <Label layoutX="14.0" layoutY="562.0" onMouseClicked="#Salir" styleClass="lbl" text="Salir" />
                   <Label fx:id="user" layoutY="255.0" prefHeight="40.0" prefWidth="232.0" styleClass="lbl" text="" />
                   <Label fx:id="user2" layoutX="769.0" layoutY="255.0" prefHeight="40.0" prefWidth="232.0" styleClass="lbl" text="" />
